# audio-rag

./: .env.compose.example  .env.example  .gitignore  README.md  compose.yaml  eval_qa.py  eval_ret.py  eval_sum.py  justfile  pyproject.toml  test_chunk.py  ui.py
app/: main.py
app/api/: openai_compat.py
app/api/middleware/: __init__.py  auth.py  errors.py  rate_limit.py  request_context.py
app/api/v1/: __init__.py  _ingest.py  _retrieve.py  generate.py  health.py  ingest.py  retrieve.py
app/core/: __init__.py  config.py  gpu.py
app/middleware/: __init__.py  auth.py  errors.py  rate_limit.py  request_context.py
app/models/: __init__.py  conversation.py  doc.py
app/repo/milvus/: __init__.py  _client.py  _collection.py  retrieval.py  storage.py
app/schema/: __init__.py  doc.py  response.py
app/schemas/: __init__.py  conversations.py  files.py  jobs.py  openai_compat.py  request.py  response.py  search.py
app/util/: __init__.py  fuse.py  logging.py
app/utils/: __init__.py  _calc.py  _download.py  download.py  fuse.py  save_upload.py
scripts/: inngest.sh  uvicorn.sh
src/: main.py
src/core/: __init__.py  config.py
src/repo/: qdrant.py
src/schemas/: request.py  response.py
src/services/: __init__.py  embed.py  ingest.py  retrieve.py
src/utils/: __init__.py  _download.py  calc.py  logging.py
test/: eval_cranfield.py  eval_retrieval.py  qdrant.py  test.sql
tests/: test.sql  test_api.py  test_conversations.py  test_db.py  test_ingestion.py  test_openai_compat.py  test_search.py
tests/eval/: eval_qa.py  eval_ret.py  eval_sum.py
(+89 files in other folders)
